--- a/my_blog/src/views/categories/tableCategories.ejs
+++ b/my_blog/src/views/categories/tableCategories.ejs
@@ -8,7 +8,7 @@
     }
 
     .btn {
-        width: 90px;
+        width: 100px;
     }
 
     .table th,
@@ -39,7 +39,7 @@
 </style>
 
 <div class="table-categories mt-5" style="padding-top: 70px;">
-    <h3 class="text-center bg-light text-secondary text-white py-2">Categorias</h3>
+    <h3 class="text-center bg-light text-secondary py-2">Categorias</h3>
     <table class="table table-hover">
         <thead>
             <tr>
