--- a/my_blog/src/views/partials/rodape.ejs
+++ b/my_blog/src/views/partials/rodape.ejs
@@ -1,5 +1,4 @@
-<!-- partials/footer.ejs -->
-<footer class="bg-dark text-white mt-5">
+<footer class="text-white mt-5">
     <div class="container py-5">
         <div class="row g-4">
             <!-- Seção Sobre -->
@@ -64,12 +63,16 @@
             <p class="mb-0 text-white">
                 &copy; <span id="current-year"><%= new Date().getFullYear() %></span> Blog Dev. Todos os direitos reservados.
             </p>
-            <p>Criado e desnvolvido por: Eduardo Praciano</p>
+            <p>Criado e desenvolvido por: Eduardo Praciano</p>
         </div>
     </div>
 </footer>
 
 <style>
+    footer {
+        background: linear-gradient(135deg, #6a11cb, #2575fc);
+    }
+
     .hover-primary {
         transition: all 0.3s ease;
     }
